# time-butler

./: .gitignore  AGENTS.md  LICENSE  PRIVACY.md  README.md  index.html  open-kairos-dev.command  open-kairos.command  open-time-butler-dev.command  package-lock.json  package.json  playwright.config.ts  vite.config.ts
data/: pomodoro-estimation-log.jsonl
docs/: codex-mistake-notebook.md  codex-task-intake.md  pomodoro-estimation-memo.md  product-optimization-methodology.md  ui-optimization-playbook.md
e2e/: accessibility.spec.ts  calendar.spec.ts  helpers.ts  navigation.spec.ts  settings.spec.ts  tasks.spec.ts  timer.spec.ts
e2e/mocks/: api-mock.ts  db-mock.ts
scripts/: analyze-daily-product-usage.mjs  private-data.mjs  run-codex-daily-report.sh  run-codex-monthly-report.sh  run-codex-weekly-report.sh
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_category.rs  audio.rs  menubar.rs  mod.rs  music.rs  pomodoro_estimation.rs  private_data.rs  sessions.rs  timer.rs
src/app/: providers.tsx  router.tsx
src/components/: intention-selector.tsx  task-selector.tsx
src/hooks/: use-scroll-memory.ts
src/lib/: ai-category.ts  date-range.ts  export-pdf.ts  notifications.ts  session-utils.ts  task-pomo-progress.ts  tauri.ts  time-pages.ts  time.ts
src/pages/: analytics-page.tsx  notes-page.tsx  onboarding-page.tsx  settings-page.tsx  tasks-page.tsx  time-planning-page.tsx  timer-page.tsx
复盘/: 周报SKILL.md  日报SKILL.md  月报SKILL.md
(+161 files in other folders)
