[package]
name = "time-butler"
version = "1.0.0"
description = "Time-butler - Personal Pomodoro Timer"
authors = ["you"]
edition = "2021"

[lib]
name = "time_butler_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
rodio = { version = "0.22.2", default-features = false, features = ["playback", "vorbis"] }
